--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
     }
 
     .list > *{
-        height: 10%;
+        height: 8vh;
         width: 100%;
         display: block;
     }
@@ -698,7 +698,7 @@
     .item-name{
         position: absolute;
         width: 75%;
-        top: 5%;
+        top: 8%;
         left: 4%;
         padding: 1vh;
         font-size: 2.25vh;
@@ -711,7 +711,7 @@
     .item-artist {
         position: absolute;
         width: 75%;
-        bottom: 5%;
+        bottom: 8%;
         left: 4%;
         padding: 1vh;
         font-size: 1.75vh;
