--- a/dj.html
+++ b/dj.html
@@ -12,6 +12,7 @@
 <body tabindex="-1">
 
     <template id="template-button-item">
+        <div class="button-symbol"></div>
         <div class="button-name"></div>
         <div class="button-bpm"></div>
         <div class="button-length"></div>
@@ -171,7 +172,8 @@
             this.bpm = effectsConfig[this.effect].bpm;
             
             if('song_path' in effectsConfig[this.effect]) {
-                this.querySelector(".button-name").textContent = songsConfig[effectsConfig[this.effect].song_path].name
+                this.querySelector(".button-name").textContent = songsConfig[effectsConfig[this.effect].song_path].name;
+                this.querySelector(".button-symbol").textContent = '♫';
                 // console.log('cmon')
                 // console.log(songsConfig[this.effect['song_path']].name)
             }
@@ -597,7 +599,7 @@
     #profile-list{
         position: absolute;
         width: 20vw;
-        height: 60%;
+        height: 70vh;
         overflow-y: auto;
         overflow-x: hidden;
     }
@@ -729,6 +731,16 @@
 
     .pressed{
         transform: scale(0.97);
+    }
+
+    .button-symbol{
+        position: absolute;
+        color: hsla(0, 0%, 100%, 0.07);
+        font-size: 15vh;
+        line-height: 20vh;
+        text-align: center;
+        width: 100%;
+        height: 100%;
     }
 
     .button-name {
