--- a/dj.html
+++ b/dj.html
@@ -577,7 +577,9 @@
         font-family: sans-serif;
         font-size: 0;
         color: hsl(0, 0%, 80%);
-        
+        -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+        -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+        -webkit-user-select: none;
     }
 
     #background{
