--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
                 for(let effect_name in effectsConfig){
                     if('song_path' in effectsConfig[effect_name]){
                         if(!(effect_name in available)){
-                            available[effect_name] = new AvailableItem(effect_name);
-                            availableList.append(available[effect_name]);
+                            if (!effect_name.startsWith('g_lasers_')) {
+                                available[effect_name] = new AvailableItem(effect_name);
+                                availableList.append(available[effect_name]);
+                            }
                         }
                     }
                 }
@@ -147,6 +149,10 @@
                     queue[key].clear = true;
                 }
                 for(let i=0; i<queueConfig.length; i++){
+                    // andrew: im so sorry
+                    // if (queueConfig[i][0].startsWith('g_lasers_')) {
+                    //     queueConfig[i][0] = 'g_' + queueConfig[i][0].substr(9);
+                    // }
                     let key = queueConfig[i].join('-');
 
                     if(key in queue){
