--- a/index.html
+++ b/index.html
@@ -115,13 +115,10 @@
             let msg = JSON.parse(event.data);
 
 
-            if(!msg.songs && !msg.effects) {
-                console.log(msg);
-            }
+            console.log('recieved message', msg);
 
             if(msg.songs){
                 songsConfig = msg.songs;
-                console.log('songs recieved:', msg);
             }
 
             if(msg.users){
@@ -134,7 +131,6 @@
             }
             
             if(msg.effects){
-                console.log('effects recieved:', msg);
                 effectsConfig = msg.effects;
                 for(let effect_name in effectsConfig){
                     if('song_path' in effectsConfig[effect_name]){
