--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content" />
 
     <title>Song Queue</title>
     <link rel="manifest" href="manifest.webmanifest">
@@ -73,8 +73,8 @@
 
 <script>
     // https://stackoverflow.com/questions/32963400/android-keyboard-shrinking-the-viewport-and-elements-using-unit-vh-in-css
-    var viewport = document.querySelector("meta[name=viewport]");
-    viewport.setAttribute("content", viewport.content + ", height=" + window.innerHeight);
+    // var viewport = document.querySelector("meta[name=viewport]");
+    // viewport.setAttribute("content", viewport.content + ", height=" + window.innerHeight);
 
     function socketInit() {
         console.log("socket init");
@@ -721,11 +721,12 @@
 
     socketInit();
 
-    window.oncontextmenu = function(event) {
-        event.preventDefault();
-        event.stopPropagation();
-        return false;
-    };
+    // disables right click
+    // window.oncontextmenu = function(event) {
+    //     event.preventDefault();
+    //     event.stopPropagation();
+    //     return false;
+    // };
 
     function isValidHttpUrl(x) {
         let url;
